--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>Say Hello <br> 
          to the<br>
     Coding World !</h2>
+
+      <p>View page to learn more</p>
 </div>
 </body>
 </html>
